--- a/Checkbox/index.html
+++ b/Checkbox/index.html
@@ -14,6 +14,7 @@
         <div class="checkbox">
             <input id="checkMe" type="checkbox" />
             <label for="checkMe"></label>
+            <div></div>
         </div>
         
     </div>
